# XIC_Extractor

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  README.md  launch_gui.bat  make_targets.bat  pyproject.toml  run_pipeline.bat  test.md  xic_extractor.spec
.codex/: hooks.json
.github/: pull_request_template.md
config/: MixSTDs.csv  settings.csv  settings.example.csv  targets.csv  targets.example.csv
docs/: 2026-05-14-untargeted-literature-gap-assessment.md  2026-05-14-untargeted-method-report.md  agent-parameter-settings.md  agent-subagent-routing.md  architecture-contract.md  architecture-import-dependency-analysis-2026-06.md  confidence-reason-precedence-contract.md  diagnostic-ledger.md  lc-msms-evidence-rules.md  lcms-msms-evidence-rules.md  project-layout.md  research-line-triage.md  validation-harness.md
gui/: config_io.py  dialogs.py  discovery_config_io.py  main.py  main_window.py  styles.py  ui.py  wheel_guard.py
scripts/: 01_extract_xic.ps1  02_csv_to_excel.py  add_istd_rt_trend.py  agent_sandbox_doctor.py  analyze_xic_request_locality.py  apply_review_action_changesets.py  audit_alignment_near_duplicates.py  benchmark_parallel.py  build_backfill_expansion_clean_target_selective_product_activation.py  build_backfill_expansion_default_product_activation.py  build_cid_nl_default_activation_successor_authority_contract.py  build_cid_nl_default_product_activation.py  build_lockbox_ai_challenge_pack.py  build_lockbox_label_collection_pack.py  build_lockbox_next_action_plan.py  build_lockbox_second_review_pack.py  build_lockbox_shadow_automation_experiment_design.py  build_lockbox_single_owner_ai_challenge_gate.py  build_lockbox_static_review_bundle.py  build_peak_choice_truth_lockbox.py  build_quant_matrix_default_activation_dry_run.py  build_quant_matrix_default_product_activation.py  build_quant_matrix_downstream_impact_smoke.py  build_quant_matrix_product_ready_closeout.py  build_quant_matrix_promotion_packet_v2.py  build_quant_matrix_promotion_validation_packet.py  build_quant_matrix_real_bundle.py  build_quant_matrix_version.py  build_quant_matrix_version_report.py  build_trace_overlay_recovery_report.py  check_backfill_expansion_census.py  check_backfill_expansion_clean_target_full_chain_replay.py  check_backfill_expansion_evidence_availability.py  check_backfill_expansion_expected_diff_provenance.py  check_backfill_expansion_full_evidence_chain.py  check_backfill_expansion_peak_mode_decomposition.py  check_backfill_expansion_raw_overlay_trace_identity.py  check_bounded_product_lanes.py  (+50 more)
(+2133 files in other folders)
