[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xic-extractor"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "pythonnet>=3.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5.0",
]

[project.scripts]
xic-extractor = "gui.main:main"

[tool.setuptools.packages.find]
include = ["gui*", "scripts*", "xic_extractor*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider -p no:tmpdir"

[tool.ruff.lint]
select = ["E", "F", "I"]
