[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xic-extractor"
version = "0.2.0"
requires-python = ">=3.10,<3.14"
dependencies = [
    "PyQt6>=6.6",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "pythonnet>=3.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=7.1.0",
]

[project.scripts]
xic-extractor = "gui.main:main"
xic-extractor-cli = "scripts.run_extraction:main"

[tool.setuptools.packages.find]
include = ["gui*", "scripts*", "xic_extractor*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider -p no:tmpdir"

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "ruff>=0.15.11",
]
