[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xic-extractor"
version = "0.2.0"
requires-python = ">=3.10,<3.14"
dependencies = [
    "PyQt6>=6.6",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "pythonnet>=3.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5.0",
]

[project.scripts]
xic-extractor = "gui.main:main"
xic-extractor-cli = "scripts.run_extraction:main"
xic-discovery-cli = "scripts.run_discovery:main"
xic-align-cli = "scripts.run_alignment:main"
xic-align-validate-cli = "scripts.run_alignment_validation:main"

[tool.setuptools.packages.find]
include = ["gui*", "scripts*", "xic_extractor*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider -p no:tmpdir"

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "ipython>=8.39.0",
    "mypy>=1.20.1",
    "ruff>=0.15.11",
]
